Fix header being off center on mobile
Foundation sets the width to 75%, but doesn't center the block so it appears off center on mobile. By forcing the block to 100% it effectively centers the text inside the navbar, which is 100% the width of the viewport.

--- a/app/assets/stylesheets/_topbar.scss
+++ b/app/assets/stylesheets/_topbar.scss
@@ -9,6 +9,7 @@
 			h1{
 				a{
 					font-size: 22px;
+					width: 100%;
 				}
 			}
 		}
